--- a/Date_Form/style.css
+++ b/Date_Form/style.css
@@ -217,4 +217,192 @@ body .container button:hover {
   color: #f7f7f8;
   border: #f17489;
 }
+
+@media (max-width: 786px) {
+  body {
+    background-color: #0d0d14;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+  }
+  body .container {
+    background-color: #171724;
+    border-radius: 10px;
+    color: #f7f7f8;
+    width: 98%;
+    height: 75vh;
+    padding: 2.5rem;
+    margin: 0;
+  }
+  body .container h3 {
+    color: #7c84a4;
+  }
+  body .container p {
+    color: #7c84a4;
+    margin-top: 1rem;
+    font-size: 0.8rem;
+  }
+  body .container form {
+    gap: 1rem;
+    margin-top: 1rem;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+  }
+  body .container form label {
+    color: #7c84a4;
+    font-size: 0.9rem;
+  }
+  body .container form label input {
+    width: 170px;
+    height: 30px;
+    margin: 8px 0;
+    background: #171724;
+    border: 1px solid #7c84a4;
+    border-radius: 4px;
+    outline-style: none;
+    padding: 0.6rem;
+  }
+  body .container form .checkbox-type {
+    width: 100%;
+    margin-top: 20px;
+    position: relative;
+    line-height: 1.1;
+    top: 10px;
+  }
+  body .container form .checkbox-type input {
+    display: none;
+  }
+  body .container form .checkbox-type .checkbox {
+    margin-left: 30px;
+    font-size: 0.6rem;
+  }
+  body .container form .checkbox-type input:checked + label:after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    opacity: 2;
+  }
+  body .container form .checkbox-type label {
+    cursor: pointer;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    color: #7c84a4;
+    top: 0;
+    border-radius: 4px;
+    background: #2f2f4f;
+  }
+  body .container form .checkbox-type label:hover {
+    border: 1px solid #646483;
+  }
+  body .container form .checkbox-type label::after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+    content: "";
+    position: absolute;
+    width: 9px;
+    height: 5px;
+    background: transparent;
+    top: 4px;
+    left: 4px;
+    border: 3px solid #fcfff4;
+    border-top: none;
+    border-right: none;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  body .container form .checkbox-type label:hover::after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+    filter: alpha(opacity=30);
+    opacity: 0.3;
+  }
+  body .container .checkbox-type {
+    width: 100%;
+    margin-top: 20px;
+    position: relative;
+    line-height: 1.1;
+    top: 10px;
+  }
+  body .container .checkbox-type input {
+    display: none;
+  }
+  body .container .checkbox-type .checkbox {
+    margin-left: 30px;
+    font-size: 0.8rem;
+  }
+  body .container .checkbox-type .checkbox a {
+    color: red;
+    text-decoration: none;
+  }
+  body .container .checkbox-type input:checked + label:after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    opacity: 2;
+  }
+  body .container .checkbox-type label {
+    cursor: pointer;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    color: #7c84a4;
+    top: 0;
+    border-radius: 4px;
+    background: #2f2f4f;
+  }
+  body .container .checkbox-type label:hover {
+    border: 1px solid #646483;
+  }
+  body .container .checkbox-type label::after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+    content: "";
+    position: absolute;
+    width: 9px;
+    height: 5px;
+    background: transparent;
+    top: 4px;
+    left: 4px;
+    border: 3px solid #fcfff4;
+    border-top: none;
+    border-right: none;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  body .container .checkbox-type label:hover::after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+    filter: alpha(opacity=30);
+    opacity: 0.3;
+  }
+  body .container button {
+    background: violet;
+    outline-style: none;
+    border: none;
+    width: 120px;
+    height: 34px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: violet;
+    font-size: 0.8rem;
+    color: #fff;
+    margin-top: 2rem;
+  }
+  body .container button:hover {
+    background: #f17489;
+    color: #f7f7f8;
+    border: #f17489;
+  }
+}
 /*# sourceMappingURL=style.css.map */
